RESOLVED FIXED306012
Address unsafe cast warnings in generated bindings code
https://bugs.webkit.org/show_bug.cgi?id=306012
Summary Address unsafe cast warnings in generated bindings code
Chris Dumez
Reported 2026-01-22 01:16:23 PST
Address unsafe cast warnings in generated bindings code.
Attachments
Chris Dumez
Comment 1 2026-01-22 01:17:57 PST
EWS
Comment 2 2026-01-24 00:21:11 PST
Committed 306141@main (d486ede80cf6): <https://commits.webkit.org/306141@main> Reviewed commits have been landed. Closing PR #57036 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-01-24 00:22:12 PST
Note You need to log in before you can comment on or make changes to this bug.