Address unsafe cast warnings in generated bindings code https://bugs.webkit.org/show_bug.cgi?id=306012

Reviewed by Darin Adler.

* Source/WebCore/Modules/entriesapi/ErrorCallback.h:
(WebCore::ErrorCallback::isJSErrorCallback const):
* Source/WebCore/Modules/entriesapi/FileCallback.h:
(WebCore::FileCallback::isJSFileCallback const):
* Source/WebCore/Modules/entriesapi/FileSystemEntriesCallback.h:
(WebCore::FileSystemEntriesCallback::isJSFileSystemEntriesCallback const):
* Source/WebCore/Modules/entriesapi/FileSystemEntryCallback.h:
(WebCore::FileSystemEntryCallback::isJSFileSystemEntryCallback const):
* Source/WebCore/Modules/geolocation/PositionCallback.h:
(WebCore::PositionCallback::isJSPositionCallback const):
* Source/WebCore/Modules/geolocation/PositionErrorCallback.h:
(WebCore::PositionErrorCallback::isJSPositionErrorCallback const):
* Source/WebCore/Modules/mediasession/MediaSessionActionHandler.h:
(WebCore::MediaSessionActionHandler::isJSMediaSessionActionHandler const):
* Source/WebCore/Modules/notifications/NotificationPermissionCallback.h:
(WebCore::NotificationPermissionCallback::isJSNotificationPermissionCallback const):
* Source/WebCore/Modules/remoteplayback/RemotePlaybackAvailabilityCallback.h:
(WebCore::RemotePlaybackAvailabilityCallback::isJSRemotePlaybackAvailabilityCallback const):
* Source/WebCore/Modules/reporting/ReportingObserverCallback.h:
(WebCore::ReportingObserverCallback::isJSReportingObserverCallback const):
* Source/WebCore/Modules/streams/QueuingStrategySize.h:
(WebCore::QueuingStrategySize::isJSQueuingStrategySize const):
* Source/WebCore/Modules/streams/UnderlyingSourceCancelCallback.h:
(WebCore::UnderlyingSourceCancelCallback::isJSUnderlyingSourceCancelCallback const):
* Source/WebCore/Modules/streams/UnderlyingSourcePullCallback.h:
(WebCore::UnderlyingSourcePullCallback::isJSUnderlyingSourcePullCallback const):
* Source/WebCore/Modules/streams/UnderlyingSourceStartCallback.h:
(WebCore::UnderlyingSourceStartCallback::isJSUnderlyingSourceStartCallback const):
* Source/WebCore/Modules/web-locks/WebLockGrantedCallback.h:
(WebCore::WebLockGrantedCallback::isJSWebLockGrantedCallback const):
* Source/WebCore/Modules/webaudio/AudioBufferCallback.h:
(WebCore::AudioBufferCallback::isJSAudioBufferCallback const):
* Source/WebCore/Modules/webaudio/AudioWorkletProcessorConstructor.h:
(WebCore::AudioWorkletProcessorConstructor::isJSAudioWorkletProcessorConstructor const):
* Source/WebCore/Modules/webcodecs/WebCodecsAudioDataOutputCallback.h:
(WebCore::WebCodecsAudioDataOutputCallback::isJSWebCodecsAudioDataOutputCallback const):
* Source/WebCore/Modules/webcodecs/WebCodecsEncodedAudioChunkOutputCallback.h:
(WebCore::WebCodecsEncodedAudioChunkOutputCallback::isJSWebCodecsEncodedAudioChunkOutputCallback const):
* Source/WebCore/Modules/webcodecs/WebCodecsEncodedVideoChunkOutputCallback.h:
(WebCore::WebCodecsEncodedVideoChunkOutputCallback::isJSWebCodecsEncodedVideoChunkOutputCallback const):
* Source/WebCore/Modules/webcodecs/WebCodecsErrorCallback.h:
(WebCore::WebCodecsErrorCallback::isJSWebCodecsErrorCallback const):
* Source/WebCore/Modules/webcodecs/WebCodecsVideoFrameOutputCallback.h:
(WebCore::WebCodecsVideoFrameOutputCallback::isJSWebCodecsVideoFrameOutputCallback const):
* Source/WebCore/Modules/webdatabase/DatabaseCallback.h:
(WebCore::DatabaseCallback::isJSDatabaseCallback const):
* Source/WebCore/Modules/webdatabase/SQLStatementCallback.h:
(WebCore::SQLStatementCallback::isJSSQLStatementCallback const):
* Source/WebCore/Modules/webdatabase/SQLStatementErrorCallback.h:
(WebCore::SQLStatementErrorCallback::isJSSQLStatementErrorCallback const):
* Source/WebCore/Modules/webdatabase/SQLTransactionCallback.h:
(WebCore::SQLTransactionCallback::isJSSQLTransactionCallback const):
* Source/WebCore/Modules/webdatabase/SQLTransactionErrorCallback.h:
(WebCore::SQLTransactionErrorCallback::isJSSQLTransactionErrorCallback const):
* Source/WebCore/Modules/webxr/XRFrameRequestCallback.h:
(WebCore::XRFrameRequestCallback::isJSXRFrameRequestCallback const):
* Source/WebCore/animation/CustomEffectCallback.h:
(WebCore::CustomEffectCallback::isJSCustomEffectCallback const):
* Source/WebCore/bindings/scripts/CodeGeneratorJS.pm:
(GenerateCallbackFunctionHeader):
(GenerateCallbackInterfaceHeader):
(GenerateCallbackHeaderContent):
(GenerateCallbackImplementationContent):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunction.cpp:
(WebCore::toJS):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunction.h:
(isType):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionGenerateIsReachable.cpp:
(WebCore::toJS):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionGenerateIsReachable.h:
(isType):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionWithThisObject.cpp:
(WebCore::toJS):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionWithThisObject.h:
(isType):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionWithTypedefs.cpp:
(WebCore::toJS):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionWithTypedefs.h:
(isType):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionWithVariadic.cpp:
(WebCore::toJS):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackFunctionWithVariadic.h:
(isType):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackInterface.cpp:
(WebCore::toJS):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackInterface.h:
(isType):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackWithFunctionOrDict.cpp:
(WebCore::toJS):
* Source/WebCore/bindings/scripts/test/JS/JSTestCallbackWithFunctionOrDict.h:
(isType):
* Source/WebCore/bindings/scripts/test/JS/JSTestVoidCallbackFunction.cpp:
(WebCore::toJS):
* Source/WebCore/bindings/scripts/test/JS/JSTestVoidCallbackFunction.h:
(isType):
* Source/WebCore/css/CSSPaintCallback.h:
(WebCore::CSSPaintCallback::isJSCSSPaintCallback const):
* Source/WebCore/dom/AbortAlgorithm.h:
(WebCore::AbortAlgorithm::isJSAbortAlgorithm const):
* Source/WebCore/dom/CreateHTMLCallback.h:
(WebCore::CreateHTMLCallback::isJSCreateHTMLCallback const):
* Source/WebCore/dom/CreateScriptCallback.h:
(WebCore::CreateScriptCallback::isJSCreateScriptCallback const):
* Source/WebCore/dom/CreateScriptURLCallback.h:
(WebCore::CreateScriptURLCallback::isJSCreateScriptURLCallback const):
* Source/WebCore/dom/IdleRequestCallback.h:
(WebCore::IdleRequestCallback::isJSIdleRequestCallback const):
* Source/WebCore/dom/MapperCallback.h:
(WebCore::MapperCallback::isJSMapperCallback const):
* Source/WebCore/dom/MutationCallback.h:
(WebCore::MutationCallback::isJSMutationCallback const):
* Source/WebCore/dom/NodeFilter.h:
(WebCore::NodeFilter::isJSNodeFilter const):
* Source/WebCore/dom/ObservableInspectorAbortCallback.h:
(WebCore::ObservableInspectorAbortCallback::isJSObservableInspectorAbortCallback const):
* Source/WebCore/dom/PredicateCallback.h:
(WebCore::PredicateCallback::isJSPredicateCallback const):
* Source/WebCore/dom/ReducerCallback.h:
(WebCore::ReducerCallback::isJSReducerCallback const):
* Source/WebCore/dom/RequestAnimationFrameCallback.h:
(WebCore::RequestAnimationFrameCallback::isJSRequestAnimationFrameCallback const):
* Source/WebCore/dom/StringCallback.h:
(WebCore::StringCallback::isJSStringCallback const):
* Source/WebCore/dom/SubscriberCallback.h:
(WebCore::SubscriberCallback::isJSSubscriberCallback const):
* Source/WebCore/dom/SubscriptionObserverCallback.h:
(WebCore::SubscriptionObserverCallback::isJSSubscriptionObserverCallback const):
* Source/WebCore/dom/ViewTransitionUpdateCallback.h:
(WebCore::ViewTransitionUpdateCallback::isJSViewTransitionUpdateCallback const):
* Source/WebCore/dom/VisitorCallback.h:
(WebCore::VisitorCallback::isJSVisitorCallback const):
* Source/WebCore/fileapi/BlobCallback.h:
(WebCore::BlobCallback::isJSBlobCallback const):
* Source/WebCore/html/VideoFrameRequestCallback.h:
(WebCore::VideoFrameRequestCallback::isJSVideoFrameRequestCallback const):
* Source/WebCore/html/VoidCallback.h:
(WebCore::VoidCallback::isJSVoidCallback const):
* Source/WebCore/inspector/RTCLogsCallback.h:
(WebCore::RTCLogsCallback::isJSRTCLogsCallback const):
* Source/WebCore/page/IntersectionObserverCallback.h:
(WebCore::IntersectionObserverCallback::isJSIntersectionObserverCallback const):
* Source/WebCore/page/NavigationInterceptHandler.h:
(WebCore::NavigationInterceptHandler::isJSNavigationInterceptHandler const):
* Source/WebCore/page/PerformanceObserverCallback.h:
(WebCore::PerformanceObserverCallback::isJSPerformanceObserverCallback const):
* Source/WebCore/page/ResizeObserverCallback.h:
(WebCore::ResizeObserverCallback::isJSResizeObserverCallback const):
* Source/WebCore/testing/MockCaptionDisplaySettingsClientCallback.h:
(WebCore::MockCaptionDisplaySettingsClientCallback::isJSMockCaptionDisplaySettingsClientCallback const):
* Source/WebCore/testing/XRSimulateUserActivationFunction.h:
(WebCore::XRSimulateUserActivationFunction::isJSXRSimulateUserActivationFunction const):
* Source/WebCore/xml/CustomXPathNSResolver.h:
(WebCore::CustomXPathNSResolver::isJSCustomXPathNSResolver const):

Canonical link: https://commits.webkit.org/306141@main