Source/WebCore/Modules/streams/UnderlyingSourceCancelCallback.h
@@ -44,6 +44,7 @@ public:
     void ref() const final { RefCounted::ref(); }
     void deref() const final { RefCounted::deref(); }
 
+    virtual bool isJSUnderlyingSourceCancelCallback() const { return false; }
     virtual CallbackResult<Ref<DOMPromise>> invoke(JSC::JSValue thisValue, JSC::JSValue reason) = 0;
 
 private:
