Source/WebCore/page/NavigationInterceptHandler.h
@@ -39,6 +39,7 @@ public:
     void ref() const final { ThreadSafeRefCounted::ref(); }
     void deref() const final { ThreadSafeRefCounted::deref(); }
 
+    virtual bool isJSNavigationInterceptHandler() const { return false; }
     virtual CallbackResult<Ref<DOMPromise>> invoke() = 0;
 
 private:
